# chinese-reader

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  app.toml  appdata.db  appdata.db.sql
.github/workflows/: rust.yml
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ja.arb  app_pl.arb  app_ru.arb  app_tr.arb
locales/: Deutsch.yaml  English.yaml  Español.yaml  Française.yaml  Italiano.yaml  Polski.yaml  Türkçe.yaml  português.yaml  Русский.yaml  اَلْعَرَبِيَّةُ.yaml  中文.yaml  日本語.yaml  한국어.yaml
models/: dict.txt
src/: anki.rs  cedict.rs  config.rs  error.rs  main.rs  pdf.rs  textbase.rs  utils.rs
src/ai/: .llama.rs.kate-swp  deepl.rs  llama.rs  manager.rs  mod.rs  ollama.rs
src/gui/: message.rs  mod.rs  settings.rs
src/ocr/: det.rs  dl.rs  mod.rs  rec.rs
src/scraper/: db.rs  mod.rs
