[package]
name = "cnreader"
version = "1.0.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
iced = { version = "0.14.*" , features=["tokio", "advanced","sipper","svg","markdown"] }
tendril = "0.4.3"
rig-core = { version = "0.17.1", features = ["audio", "derive", "image"] }
deepl = "0.6.5"
tokio = { version = "1.45.1", features = ["full"] }
rusqlite = { version = "0.32.0", features = ["bundled", "chrono"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "chrono", "env-filter"] }
tokio-stream = "0.1.17"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.22.1"
anyhow = "1.0.98"
toml = "0.8.22"
rand = "0.9.1"
async-channel = "2.3.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
image = "0.25.6"
ndarray = { version = "0.17.2", features = ["serde", "blas"] }
ort = "2.0.0-rc.11"
imageproc = "0.25.0"
rfd = "0.15.4"
scraper = { version = "0.24.0", optional = true }
chrono = "0.4.42"
regex = "1.12.2"
async-trait = "0.1.89"
downcast-rs = "2.0.2"
sipper = "0.1.0"
url = "2.5.7"

[target.'cfg(target_family = "unix")'.dependencies]
wl-clipboard-rs = "*"

[target.'cfg(target_family = "windows")'.dependencies]
clipboard-win = "5.4.0"
winapi = "0.3.9"
shell32-sys = "0.1.2"

[features]
scraper = ["dep:scraper"]
