[package]
name = "cnreader"
version = "1.0.8"
edition = "2024"

[dependencies]
rayon = "1.10.0"
iced = { version = "0.14.*" , features=["tokio", "advanced","sipper","svg","markdown"] }
tendril = "0.4.3"
rig-core = { version = "0.31.0", features = ["derive", "image"] }
deepl = "0.6.5"
tokio = { version = "1.45.1", features = ["full"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "chrono", "env-filter"] }
tokio-stream = "0.1.18"
serde = { version = "1.0.219", features = ["derive"] }
toml = "1.0.3"
rand = "0.10.0"
async-channel = "2.5.*"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
image = "0.25.9"
ndarray = { version = "0.17.2", features = ["serde", "blas"] }
ort = "2.0.0-rc.11"
imageproc = "0.26.1"
rfd = "0.15.4"
scraper = { version = "0.24.0", optional = true }
chrono = "0.4.42"
regex = "1.12.2"
async-trait = "0.1.89"
downcast-rs = "2.0.2"
sipper = "0.1.0"
url = "2.5.7"
rust-i18n = "3.1.5"
dirs = "6.0.0"
env = "1.0.1"

[target.'cfg(target_family = "unix")'.dependencies]
wl-clipboard-rs = "*"

[target.'cfg(target_family = "windows")'.dependencies]
clipboard-win = "5.4.0"
winapi = "0.3.9"
shell32-sys = "0.1.2"

[features]
scraper = ["dep:scraper"]

# Add this section for Debian packaging
[package.metadata.deb]
assets = [
    # The binary itself
    ["target/release/cnreader", "usr/bin/", "755"],
    ["dict.db", "usr/share/cndict/", "644"],
]
# The section below defines system-level dependencies
depends = "$auto, libssl3, libc6 >= 2.39"
# $auto: Automatically detects libraries linked to your binary
# libssl3, libc6: Example manual dependencies required by your app

# Optional: Maintain a specific maintainer name
maintainer = "Morti <you@example.com>"

# Optional: Copyright file path
copyright = "LICENSE"
